Chapter11/networkpolicies/all-app-allowed-traffic.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-app-allowed-traffic
spec:
  podSelector:
    matchLabels:
      component: app
      app: simplestlab
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: lb
              app: simplestlab
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              component: db
              app: simplestlab
      ports:
        - protocol: TCP
          port: 5432  
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
