Chapter11/networkpolicies/all-db-allowed-traffic.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-db-allowed-traffic
spec:
  podSelector:
    matchLabels:
      component: db
      app: simplestlab
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: app
              app: simplestlab
      ports:
        - protocol: TCP
          port: 5432
