Chapter11/networkpolicies/allow-namespaced.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespaced
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
  - to:
      - podSelector: {}
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: UDP
        port: 53

  ingress:
  - from:
      - podSelector: {}
