Chapter11/networkpolicies/disable-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: disable-all-traffic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
